trying to fix viewport issue on iOS

--- a/style/style.css
+++ b/style/style.css
@@ -23,11 +23,11 @@ body {
   min-width: 150px;
   align-self: stretch;
 }
-/*.polaroids > div {
+.polaroids > div {
   margin: 10px;
-  flex: 1;
+  /*flex: 1;*/
   min-width: 150px;
-}*/
+}
 .polaroids div {
   -webkit-transform: rotate(-2deg);
   -moz-transform: rotate(-2deg);
